--- a/doc/src/manual/ch-introduction.tex
+++ b/doc/src/manual/ch-introduction.tex
@@ -9,13 +9,15 @@ The name itself stands for Objective Modular Network Testbed
 in C++. {\opp} has its distant roots in OMNeT, a simulator written
 in Object Pascal by dr. Gy\"{o}rgy Pongor.
 
-The simulator can be used for modeling:
+The simulator can be used for:
 \begin{itemize}
-  \item{communication protocols}
-  \item{computer networks and traffic modeling}
-  \item{multi-processor and distributed systems}
-  \item{administrative systems}
-  \item{\dots any other system where the discrete event approach is
+  \item{traffic modeling of telecommunication networks}
+  \item{protocol modeling}
+  \item{modeling queueing networks}
+  \item{modeling multiprocessors and other distributed hardware systems}
+  \item{validating hardware architectures}
+  \item{evaluating performance aspects of complex software systems}
+  \item{\dots modeling any other system where the discrete event approach is
     suitable.}
 \end{itemize}
 
@@ -254,16 +256,18 @@ Pongor, and two students signed up: \'{A}kos Kun and Andr\'{a}s Varga.
 The basis for the design was Mr. Pongor's existing simulation
 software written in Pascal, named OMNeT.
 
-At that time, we wrote the code under Borland C++ 3.1. The idea
-of multiple runtime environments (a significant addition to the
-original OMNeT design) was there from the first moment; naturally,
-we used Turbo Vision (Borland's then successful character-based
-GUI) for the first `graphical' user interface. In 1992, we submitted
-a paper about {\opp} to the student's annual university conference
+We started developing the code in Borland C++ 3.1. The idea
+of multiple runtime environments, a significant addition to the
+original OMNeT design, was there from the very beginning.
+We used Turbo Vision (Borland's then successful character-based
+GUI) for the first `graphical' user interface.
+
+In 1992, we submitted a paper about {\opp} to the
+student's annual university conference
 (named ``TDK'') and won first prize in the ``Software'' section.
 Later we also won 1st prize in the national ``TDK''. Then the
 idea came to port {\opp} to Unix (first for AIX on an RS/6000
-with 16MB (!) RAM, later Linux), until all development was done
+with only 16MB RAM, later Linux), until all development was done
 in Linux and BC3.1 could no longer be supported.
 
 Well, here's a brief list of events since then -- maybe one time
@@ -292,7 +296,7 @@ Hungary. We used a version of {\opp}.
 
 1998 March: added Plove
 
-1998 June: animation implemented in GNED
+1998 June: animation implemented in Tkenv
 
 1998 Sept-1999 May: work at MeTechnology (later Brokat) in Leipzig
 
