--- a/doc/src/manual/ch-run-sim.tex
+++ b/doc/src/manual/ch-run-sim.tex
@@ -727,13 +727,13 @@ from the distribution:
 \fpar{module-messages} = yes & Specifies whether module messages are printed or not. \\\hline
 %%
 \fpar{errmsgs-to-console} = yes & Specifies whether error messages should be
-sent to and displayed at the 'console' segment. \\\hline
+sent to and displayed at the `console' segment. \\\hline
 %%
 \fpar{infomsgs-to-console} = no & Specifies whether info messages
-should be sent to and displayed at the 'console' segment. \\\hline
+should be sent to and displayed at the `console' segment. \\\hline
 %%
 \fpar{modmsgs-to-console} = no & Specifies whether module \textit{ev}
-output should be sent to and displayed at the 'console'
+output should be sent to and displayed at the `console'
 segment.\\\hline
 \end{longtable}
 
@@ -976,12 +976,12 @@ See the license for distribution terms and warranty disclaimer.
 
 A tool to help select good random number generator seed values.
 Usage:
-  seedtool i seed         - index of 'seed' in cycle
-  seedtool s index        - seed at index 'index' in cycle
-  seedtool d seed1 seed2  - distance of 'seed1' and 'seed2' in cycle
-  seedtool g seed0 dist   - generate seed 'dist' away from 'seed0'
-  seedtool g seed0 dist n - generate 'n' seeds 'dist' apart, starting
-                            at 'seed0'
+  seedtool i seed         - index of `seed' in cycle
+  seedtool s index        - seed at index `index' in cycle
+  seedtool d seed1 seed2  - distance of `seed1' and `seed2' in cycle
+  seedtool g seed0 dist   - generate seed `dist' away from `seed0'
+  seedtool g seed0 dist n - generate `n' seeds `dist' apart, starting
+                            at `seed0'
   seedtool t              - generate hashtable
   seedtool p              - print out hashtable
 \end{verbatim}
