--- a/doc/src/manual/ch-simple-modules.tex
+++ b/doc/src/manual/ch-simple-modules.tex
@@ -1869,7 +1869,7 @@ Conventions for writing simple\index{module!simple} modules:
     during simulation, then to avoid having to look it up by name each
     time (like \ttt{d=par(''delay'')}) you may query its pointer into a
     \cclass[cPar]{cPar*} state variable with the same name prepended with
-    'p' (like \ttt{pDelay=\&par(''delay'')}).}
+    `p' (like \ttt{pDelay=\&par(''delay'')}).}
   \item{Use \fname{ev.printf()} and \texttt{ev <}\texttt{<}... (see
     later) to print out information on what the module is doing. Doing
     so will pay out several times when it comes to debugging. Use a
