--- a/doc/usman/ch-ana-sim.tex
+++ b/doc/usman/ch-ana-sim.tex
@@ -94,7 +94,7 @@ the result to the standard output.
 
 
 Filters can be incorporated in one of three ways: as \fprog{awk}
-expressions, as \fprog{awk} programs or as external programs. An 'awk
+expressions, as \fprog{awk} programs or as external programs. An `awk
 expression' filter means assembling and launching a command like this:
 
 \begin{Verbatim}[commandchars=\\\{\}]
