--- a/doc/usman/history.tex
+++ b/doc/usman/history.tex
@@ -5,8 +5,10 @@
 \hline
 \tabheadcol
 \tbf{Date} & \tbf{Author} & \tbf{Change}\\\hline
+2003/05 & AV & revised and reorganized NED chapter\\\hline
+%%
 2003/04 & AV & added section "Object ownership management"; removed section
-               "Using shared objects" \\\hline
+               on "Using shared objects" \\\hline
 %%
 2003/01 & AV & Added chapter about message subclassing; revised chapter about
 running the simulation and incorporated new Cmdenv options; added new
