--- a/doc/usman/usman.tex
+++ b/doc/usman/usman.tex
@@ -14,6 +14,8 @@
 %%\usepackage{srcltx}
 
 
+%% try this for spell checking: cat ess2002.tex | ispell -l -t -a | sort | uniq | more
+
 %%
 %% PDF Header
 %%
